--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: info@kjerner.com
 description: >- # this means to ignore newlines until "baseurl:"
   Kjerner gets to the core of what you do.
   Support your business without the cost and risk of custom software.
-baseurl: "/Kjernersite/" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://kjerner.com" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 # github_username:  jekyll
